--- a/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj.filters
+++ b/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="source\Game\Terrain\BiomeHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\Game\Terrain\TerrainMaterial.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Game\Camera.h">
@@ -237,6 +240,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\Game\Terrain\BiomeHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Game\Terrain\TerrainMaterial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
